Configuro el metodo Post de Centro, y compruebo funcionamiento con la API.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -41,7 +41,7 @@
                 android:resource="@xml/file_paths" />
         </provider>
         <activity
-            android:name=".view.RegisterCentroActivity"
+            android:name=".view.RegisterCentroView"
             android:exported="false" />
         <activity
             android:name=".view.ViewCentroActivity"
