Adapto vista del Mapa, para mostrar los centros en el mapa recuperando los datos de la API y con MVP

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,7 +59,7 @@
             android:name=".view.residente.RegisterResidenteActivity"
             android:exported="false" />
         <activity
-            android:name=".view.MapsActivity"
+            android:name=".view.MapsActivityView"
             android:exported="false" />
         <activity
             android:name=".view.MainActivityView"
