--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,7 +34,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
     implementation 'androidx.room:room-common:2.5.0'
-    implementation 'com.google.android.gms:play-services-maps:18.1.0'
+    implementation 'com.google.android.gms:play-services-location:21.0.1'
     implementation 'androidx.room:room-runtime:2.5.0'
     implementation 'androidx.coordinatorlayout:coordinatorlayout:1.2.0'
     annotationProcessor 'androidx.room:room-compiler:2.5.0'
