--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -40,6 +40,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths" />
         </provider>
+
         <activity
             android:name=".view.centro.RegisterCentroView"
             android:exported="false" />
@@ -48,6 +49,9 @@
             android:exported="false" />
         <activity
             android:name=".view.profesional.ProfesionalesListView"
+            android:exported="false" />
+        <activity
+            android:name=".view.profesional.FavProfesionalesListView"
             android:exported="false" />
         <activity
             android:name=".view.profesional.RegisterProfesionalView"
