Creo una vista para poder cargar los datos del profesional desde la vista de favoritos desde el boton detalle.

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,9 @@
             android:name=".view.profesional.RegisterProfesionalView"
             android:exported="false" />
         <activity
+            android:name=".view.profesional.DetailsProfesionalView"
+            android:exported="false" />
+        <activity
             android:name=".view.residente.ResidentesListView"
             android:exported="false" />
         <activity
